class 8 finish upto razorpay completed

--- a/revision/Frontend_Folder/index.html
+++ b/revision/Frontend_Folder/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CREATING SIGNUP PAGE</title>
-</head>
-<body>
-    <form>
+  </head>
+  <body>
+    <!-- <form>
         <label>Email</label>
         <input type="email">
         <label>Name</label>
@@ -17,9 +17,9 @@
         <label>confirmPassword</label>
         <input type="password" class="cpassword">
         <button>Signup</button>
-    </form>
+    </form> -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         let btn = document.querySelector("button");
         btn.addEventListener('click',async function(e){  //async coz the request is going
@@ -33,6 +33,75 @@
         let response = await axios.post('/auth/signup', {email,password,name,confirmPassword}); //2nd parameter is what we are sending to the backend
             console.log(response.data);
         })
+    </script> -->
+
+    <button id="rzp-button1">Pay</button>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script>
+      var options = {
+        //yeh hmesha backend se aana chahiye
+
+        key: "rzp_test_mFz7833Vo7fq6q", // Enter the Key ID generated from the Dashboard
+        amount: "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+        currency: "INR",
+        name: "Zomato",
+        // "order_id":"our key which provide with backend",
+        description: "Test Transaction",
+        handler: function (response) {
+          alert(response.razorpay_payment_id);
+          alert(response.razorpay_order_id);
+          alert(response.razorpay_signature);
+
+          //pay after handler function
+          var orderId;
+          $(document).ready(function () {
+            var settings = {
+              url: "/api/booking/verification",
+              method: "POST",
+              timeout: 0,
+              headers: {
+                "Content-Type": "application/json",
+              },
+              data: JSON.stringify({
+                amount: "500",
+              }),
+            };
+
+            //creates new orderId everytime
+            $.ajax(settings).done(function (response) {
+              orderId = response.orderId;
+              console.log(orderId);
+              $("button").show();
+            });
+          });
+        },
+
+        prefill: {
+          name: "Gaurav Kumar",
+          email: "gaurav.kumar@example.com",
+          contact: "9999999999",
+        },
+        notes: {
+          address: "Razorpay Corporate Office",
+        },
+        theme: {
+          color: "#99cc33",
+        },
+      };
+      var rzp1 = new Razorpay(options);
+      rzp1.on("payment.failed", function (response) {
+        alert(response.error.code);
+        alert(response.error.description);
+        alert(response.error.source);
+        alert(response.error.step);
+        alert(response.error.reason);
+        alert(response.error.metadata.order_id);
+        alert(response.error.metadata.payment_id);
+      });
+      document.getElementById("rzp-button1").onclick = function (e) {
+        rzp1.open();
+        e.preventDefault();
+      };
     </script>
-</body>
+  </body>
 </html>
